# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/qmyan/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVFormat.cpp  CMakeLists.txt  FFmpegUtils.cpp  native-lib.cpp
app/src/main/cpp/include/main/: native-lib.h
app/src/main/cpp/includes/libavutil/: common.h  frame.h
app/src/main/cpp/includes/main/: AVFormat.h  native-lib.h
app/src/main/cpp/includes/utils/: FFmpegUtils.h  Log.h
app/src/main/java/com/qmyan/ffmpegdemo/: MainActivity.java
app/src/main/java/com/qmyan/ffmpegdemo/utils/: FileUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/qmyan/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
